--- a/apps/llecoop/src/styles/styles_theme-colors.scss
+++ b/apps/llecoop/src/styles/styles_theme-colors.scss
@@ -134,5 +134,6 @@ $_rest: (
 );
 
 $primary-palette: map.merge(map.get($_palettes, primary), $_rest);
+$secondary-palette: map.merge(map.get($_palettes, secondary), $_rest);
 $tertiary-palette: map.merge(map.get($_palettes, tertiary), $_rest);
 $error-palette: map.merge(map.get($_palettes, error), $_rest);
