--- a/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
+++ b/libs/core/table-with-filtering/src/lib/table-with-filtering/table-with-filtering.component.html
@@ -10,31 +10,29 @@
   </h2>
 
   @if (viewExtraActions.length) {
-    <div class="flex flex-row justify-center items-center gap-sm">
-      @for (action of viewExtraActions; track action) {
-        <button
-          type="button"
-          mat-flat-button
-          color="accent"
-          class="text-white"
-          [disabled]="action.disabled()"
-          (click)="action.execute()">
-          <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
-        </button>
-      }
-    </div>
-  }
-
-  @if (routingToDetailPage.visible) {
+  <div class="flex flex-row justify-center items-center gap-sm">
+    @for (action of viewExtraActions; track action) {
     <button
       type="button"
       mat-flat-button
-      color="accent"
-      class="text-white"
-      [disabled]="routingToDetailPage.disabled"
-      [routerLink]="routingToDetailPage.path || ['./crear']">
-      <mat-icon>add</mat-icon> {{ routingToDetailPage.label || 'Crear' }}
+      [disabled]="action.disabled()"
+      (click)="action.execute()"
+    >
+      <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
     </button>
+    }
+  </div>
+  }
+
+  @if (routingToDetailPage.visible) {
+  <button
+    type="button"
+    mat-flat-button
+    [disabled]="routingToDetailPage.disabled"
+    [routerLink]="routingToDetailPage.path || ['./crear']"
+  >
+    <mat-icon>add</mat-icon> {{ routingToDetailPage.label || 'Crear' }}
+  </button>
   }
 </div>
 
@@ -43,7 +41,8 @@
   [fields]="facade.filterFormConfig || []"
   [model]="{ text: '' }"
   [submitAvailable]="false"
-  (changeEvent)="onChangeFiltering($event)">
+  (changeEvent)="onChangeFiltering($event)"
+>
 </plastik-shared-form-feature>
 
 <plastik-shared-table
@@ -61,5 +60,6 @@
   [extraRowStyles]="tableDefinition.extraRowStyles"
   [actionsColStyles]="tableDefinition.actionsColStyles || ''"
   (changeSorting)="onChangeSorting($event)"
-  (delete)="onDelete($event)">
+  (delete)="onDelete($event)"
+>
 </plastik-shared-table>
