--- a/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
+++ b/libs/core/detail-item-form/src/lib/detail-item-form/detail-item-form.component.html
@@ -2,8 +2,7 @@
 @let viewExtraActions = facade.viewExtraActions?.() || [];
 @let formConfig = facade.formConfig;
 
-<div
-  class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
+<div class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex content-center items-center h4 gap-sub">
     <mat-icon class="text-[40px] size-[40px]">{{ viewConfig.icon }}</mat-icon>
     <span>{{ viewConfig.title | titlecase }}</span>
@@ -11,29 +10,34 @@
 
   <div class="flex flex-col items-center sm:flex-row sm:justify-end gap-sm">
     @if (viewExtraActions.length) {
-      @for (action of viewExtraActions; track action.id) {
-        @if (action.type === 'button') {
-          <button
-            type="button"
-            mat-flat-button
-            color="accent"
-            class="w-full text-white sm:w-auto"
-            [disabled]="action?.disabled()"
-            (click)="action?.execute()">
-            <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
-          </button>
-        }
-        @if (action.type === 'text') {
-          <div
-            class="flex justify-center items-center w-full gap-tiny sm:w-auto"
-            [ngClass]="action.styles">
-            <mat-icon>{{ action.icon }}</mat-icon>
-            {{ action.text }}
-          </div>
-        }
-      }
+    @for (action of viewExtraActions; track action.id) {
+    @if (action.type === 'button') {
+    <button
+      type="button"
+      mat-flat-button
+      class="w-full sm:w-auto"
+      [disabled]="action?.disabled()"
+      (click)="action?.execute()"
+    >
+      <mat-icon>{{ action.icon }}</mat-icon> {{ action.label }}
+    </button>
     }
-    <button type="button" mat-flat-button color="accent" class="text-white" [routerLink]="['../']">
+    @if (action.type === 'text') {
+    <div
+      class="flex justify-center items-center w-full gap-tiny sm:w-auto"
+      [ngClass]="action.styles"
+    >
+      <mat-icon>{{ action.icon }}</mat-icon>
+      {{ action.text }}
+    </div>
+    }
+    }
+    }
+    <button
+      type="button"
+      mat-flat-button
+      [routerLink]="['../']"
+    >
       <mat-icon>arrow_back</mat-icon> Tornar al llistat
     </button>
   </div>
@@ -47,5 +51,6 @@
   [submitConfig]="formConfig.getSubmitFormConfig?.(!!facade.model?.()) || {}"
   (temporaryChangeEvent)="facade.onChange?.($event)"
   (pendingChangesEvent)="pendingChanges.set($event)"
-  (changeEvent)="facade.onSubmit($event); pendingChanges.set(false)">
+  (changeEvent)="facade.onSubmit($event); pendingChanges.set(false)"
+>
 </plastik-shared-form-feature>
