--- a/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
+++ b/libs/llecoop/order-list/feature/detail/src/lib/order-list-feature-detail.component/llecoop-order-list-feature-detail.component.html
@@ -1,15 +1,18 @@
 @let viewConfig = facade.viewConfig();
 @let tableDefinition = facade.tableDefinition;
 
-<div
-  class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
+<div class="flex flex-col flex-wrap justify-center items-center gap-sm md:flex-row md:justify-between">
   <h2 class="flex content-center items-center h4 gap-sub">
     <mat-icon class="text-[40px] size-[40px]">{{ viewConfig.icon }}</mat-icon>
     <div [innerHTML]="viewConfig.title"></div>
   </h2>
 
   <div class="flex flex-row justify-end items-center gap-sm">
-    <button type="button" mat-flat-button color="accent" [routerLink]="['/admin/comanda']">
+    <button
+      type="button"
+      mat-flat-button
+      [routerLink]="['/admin/comanda']"
+    >
       <mat-icon>arrow_back</mat-icon> Tornar al llistat
     </button>
   </div>
@@ -20,7 +23,8 @@
   [fields]="facade.filterFormConfig || []"
   [model]="{ text: '' }"
   [submitAvailable]="false"
-  (changeEvent)="facade.onChangeFilterCriteria($event)">
+  (changeEvent)="facade.onChangeFilterCriteria($event)"
+>
 </plastik-shared-form-feature>
 
 <plastik-shared-table
@@ -39,22 +43,27 @@
   [expandedDetailTpl]="orderDetail"
   [expandable]="true"
   [expandedElementId]="tableDefinition.getSelectedItemId?.() || null"
-  (changeSorting)="facade.onTableSorting($event)">
+  (changeSorting)="facade.onTableSorting($event)"
+>
 </plastik-shared-table>
 
-<ng-template #orderDetail let-element="element">
+<ng-template
+  #orderDetail
+  let-element="element"
+>
   @defer (when !!element) {
-    @let fields = facade.orderLIstDetailUserOrderDetailFormStructure.getConfig() || [];
-    @let submitConfig =
-      facade.orderLIstDetailUserOrderDetailFormStructure.getSubmitFormConfig?.(!!element) || {};
+  @let fields = facade.orderLIstDetailUserOrderDetailFormStructure.getConfig() || [];
+  @let submitConfig =
+  facade.orderLIstDetailUserOrderDetailFormStructure.getSubmitFormConfig?.(!!element) || {};
 
-    <plastik-shared-form-feature
-      class="flex flex-row justify-between content-center items-end filters-box"
-      [fields]="fields"
-      [model]="element"
-      [submitConfig]="submitConfig"
-      (pendingChangesEvent)="pendingChanges.set($event)"
-      (changeEvent)="facade.onSaveUserOrder($event); pendingChanges.set(false)">
-    </plastik-shared-form-feature>
+  <plastik-shared-form-feature
+    class="flex flex-row justify-between content-center items-end filters-box"
+    [fields]="fields"
+    [model]="element"
+    [submitConfig]="submitConfig"
+    (pendingChangesEvent)="pendingChanges.set($event)"
+    (changeEvent)="facade.onSaveUserOrder($event); pendingChanges.set(false)"
+  >
+  </plastik-shared-form-feature>
   }
 </ng-template>
