--- a/libs/shared/confirm/data-access/src/lib/shared-confirm-feature.component.html
+++ b/libs/shared/confirm/data-access/src/lib/shared-confirm-feature.component.html
@@ -1,20 +1,27 @@
 <div>
-  <p mat-dialog-title class="text-center md:text-left">{{ data.title }}</p>
-  <div mat-dialog-content class="text-center md:text-left" [innerHTML]="data.message"></div>
+  <p
+    mat-dialog-title
+    class="text-center md:text-left"
+  >{{ data.title }}</p>
+  <div
+    mat-dialog-content
+    class="text-center md:text-left"
+    [innerHTML]="data.message"
+  ></div>
   <mat-dialog-actions class="flex flex-nowrap justify-center md:justify-end">
     <button
+      mat-button
       type="button"
-      mat-flat-button
       mat-dialog-close
-      class="w-1/2 text-white bg-gray-60 md:w-auto">
+    >
       {{ data.ko }}
     </button>
     <button
+      mat-button
       type="button"
-      mat-flat-button
       mat-dialog-close="true"
       cdkFocusInitial
-      class="w-1/2 md:w-auto bg-primary">
+    >
       {{ data.ok }}
     </button>
   </mat-dialog-actions>
