refactor(llecoop/order-list/list): #527 set order naming to YYYY-WW format
ISSUES CLOSED: #527

--- a/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
+++ b/libs/core/cms-layout/feature/src/lib/core-cms-layout-feature/core-cms-layout-feature.component.html
@@ -122,7 +122,7 @@
     <mat-icon class="size-[30px] text-[30px] m-0 p-0">account_circle</mat-icon>
   </button>
   <mat-menu #menu="matMenu" class="px-sub">
-    <span class="block border-b-2 sm:hidden w-fit text-pretty p-tiny border-b-gray-10">{{
+    <span class="block border-b-2 sm:hidden w-fit text-balance p-tiny border-b-gray-10">{{
       headerMenu?.label()
     }}</span>
 
