fix(auth): #528 add theme toggle to auth views and fix UI
ISSUES CLOSED: #528

--- a/apps/llecoop/src/styles/styles.scss
+++ b/apps/llecoop/src/styles/styles.scss
@@ -168,4 +168,14 @@
       filled-disabled-input-text-color: var(--mat-sys-outline),
     )
   );
+
+  @include mat.card-overrides(
+    (
+      elevated-container-color: var(--mat-sys-inverse-on-surface),
+    )
+  );
+}
+
+.mat-mdc-icon-button {
+  line-height: normal;
 }
