--- a/apps/llecoop/src/styles/styles.scss
+++ b/apps/llecoop/src/styles/styles.scss
@@ -93,7 +93,8 @@
     @apply underline underline-offset-2 transition-colors duration-300;
 
     &:hover {
-      @apply text-black decoration-black;
+      color: var(--mat-sys-secondary);
+      border-color: var(--mat-sys-secondary);
     }
   }
 
