fix(llecoop/product/list): #557 add sorting by category name in products table
ISSUES CLOSED: #557

--- a/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
+++ b/libs/shared/table/ui/src/lib/shared-table-ui/shared-table-ui.component.html
@@ -15,7 +15,7 @@
       <ng-container [matColumnDef]="column.key" [sticky]="column.sticky">
         <mat-header-cell
           *matHeaderCellDef
-          [mat-sort-header]="column.key"
+          [mat-sort-header]="column.propertyPath"
           [disabled]="!column.sorting"
           [ngClass]="column.cssClasses?.[0] || ''">
           {{ column.title }}
