refactor(nasa-images): #559 add an opacity transition for shared-activity-ui in llecoop app

--- a/apps/llecoop/src/app/app.component.html
+++ b/apps/llecoop/src/app/app.component.html
@@ -1,19 +1,18 @@
-@if (isActive()) {
-  <plastik-shared-activity-ui-overlay>
-    <div class="spinner-container">
-      <div class="lds-ripple">
-        <div></div>
-        <div></div>
-      </div>
-      <p class="sr-only">carregant dades...</p>
+<plastik-shared-activity-ui-overlay [ngClass]="{ 'opacity-0 transition-opacity duration-300': !isActive() }">
+  <div class="spinner-container">
+    <div class="lds-ripple">
+      <div></div>
+      <div></div>
     </div>
-  </plastik-shared-activity-ui-overlay>
-}
+    <p class="sr-only">carregant dades...</p>
+  </div>
+</plastik-shared-activity-ui-overlay>
 
 @defer (when !!notificationStore.configuration()) {
-  <div
-    [plastikSnackbar]="notificationStore.configuration()"
-    (sendDismiss)="notificationStore.dismiss()"></div>
+<div
+  [plastikSnackbar]="notificationStore.configuration()"
+  (sendDismiss)="notificationStore.dismiss()"
+></div>
 }
 
 <router-outlet></router-outlet>
